# sw-llm-knowledge-graph

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  test_imports.py
python-api/: alembic.ini  pyproject.toml  requirements.txt
python-api/alembic/: env.py
python-api/alembic/versions/: 001_initial_schema.py
python-api/app/: config.py  main.py
python-api/app/auth/: csrf.py  google.py  jwt.py  middleware.py
python-api/app/core/: logging_config.py  metrics.py  path_sanitizer.py  pdf_extractor.py  rust_bridge.py  search_service.py
python-api/app/db/: lancedb_client.py  models.py  postgres.py
python-api/app/llm/: edge_pruner.py  embedder.py  extractor.py  ner_tagger.py  ollama_client.py  regex_patterns.py  topic_extractor.py  two_stage_extractor.py
python-api/app/models/: schemas.py  template.py
python-api/app/pipeline/: build_graph_from_ner.py  ingest_worker.py  job_manager.py  topic_worker.py
python-api/app/routers/: admin.py  agent.py  analytics.py  auth.py  collections.py  documents.py  drive.py  finetune.py  graph.py  ingest.py  ontology.py  search.py  templates.py  topics.py  ws.py
python-api/app/services/: agent_service.py  analytics_service.py  cost_tracker.py  drive_service.py  entity_merger.py  extraction_registry.py  finetune_service.py  merge_strategy.py  multimodal_service.py  template_factory.py  template_gallery.py
python-api/scripts/: backfill_ner_tags.py  extract_entities.py
python-api/tests/: conftest.py  test_admin.py  test_agent.py  test_analytics.py  test_auth.py  test_build_graph_ner.py  test_collections.py  test_cost_tracker.py  test_csrf.py  test_documents.py  test_drive.py  test_embedder.py  test_finetune.py  test_graph.py  test_ingest.py  test_lancedb_client.py  test_metrics_integration.py  test_ner_tagger.py  test_ontology.py  test_path_sanitizer.py  test_phase6_hardening.py  test_rate_limit.py  test_rate_limit_integration.py  test_search.py  test_search_service.py  test_security.py  test_spec_compliance.py  test_topic_extractor.py  test_topic_worker.py  test_topics.py  test_wal_recovery.py  test_ws.py
python-api/tests/integration/: conftest.py  helpers.py  test_graph.py  test_indexation.py  test_ontology.py
python-api/tests/test_chat/: test_knowledge_chat.py
python-api/tests/test_hyperedge/: test_hyperedge_pruning.py
python-api/tests/test_merge/: test_entity_merger.py  test_feed_endpoint.py  test_merge_strategy.py
python-api/tests/test_templates/: test_extraction_registry.py  test_template_api.py  test_template_config.py  test_template_factory.py  test_template_gallery.py
python-api/tests/test_temporal/: test_temporal_extraction.py
python-api/tests/test_two_stage/: test_edge_pruner.py  test_ollama_client.py  test_two_stage_extractor.py
rust-core/: Cargo.toml  README.md  build.rs  pyproject.toml
rust-core/.cargo/: config.toml
rust-core/benches/: concurrent_search_bench.rs  index_bench.rs  search_bench.rs
rust-core/python/rust_core/: __init__.py
rust-core/src/: errors.rs  index_manager.rs  lib.rs  models.rs
rust-core/src/graph/: builder.rs  export.rs  keys.rs  merge.rs  mod.rs  traversal.rs
rust-core/src/ingestion/: chunker.rs  extractor.rs  mod.rs  scanner.rs
rust-core/src/storage/: mod.rs  (+2 more)
rust-core/tests/: audit_regression_test.rs  entity_resolution_test.rs  graph_pruning_test.rs  index_concurrency_test.rs  integration_graph.rs  integration_lancedb.rs  ontology_validation_test.rs  phase6_hardening_test.rs  search_test.rs  stress_test.rs  wal_recovery_test.rs
(+245 files in other folders)
